--- a/launch.html
+++ b/launch.html
@@ -58,7 +58,7 @@
     _kms('//i.kissmetrics.com/i.js');
     _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
     </script>
-		
+
 </head>
 
 <body>
@@ -274,14 +274,14 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Launch Status</h4>
+                        <h4 class="modal-title">Launching Application</h4>
                     </div>
                     <div class="modal-body" id="launchStatusModelBody">
                         <p>...</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <a href="apps.html"><button type="button" class="btn btn-primary">View Application</button></a>
+                        <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
+                        <!--<a href="apps.html"><button type="button" class="btn btn-primary">Dismiss</button></a>-->
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -366,7 +366,12 @@
                 var image_name=$(btnData).attr("data-image-name");
                 var image_id=$(btnData).attr("data-image-id");
 
-                $("#launchStatusModelBody").html("<p>Your application instanct is launching.  Please wait. <br/><br/>image_id: "+image_id+"<br/>image_name: "+image_name);
+                $("#launchStatusModelBody").html("<p>Your application instanct is launching.  Please wait. <br/><br/>image_id: "+image_id+"<br/>image_name: "+image_name+'<br/><h1>Launching......</h1><br/><div class="progress progress-striped active"><div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%"><span class="sr-only">100% Complete</span></div></div>');
+
+                window.setTimeout(function(){
+                    console.log('heelo');
+                    window.location.replace("apps.html");
+                },4000);
             }
 
         </script>
