--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
 	
 	<!-- start: Meta -->
 	<meta charset="utf-8">
-	<title>Applications</title>
+	<title>Application Details</title>
 	<!-- end: Meta -->
 	
 	<!-- start: Mobile Specific -->
@@ -31,7 +31,34 @@
     <!-- start: Favicon and Touch Icons -->
     <link href='assets/ico/favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <!-- end: Favicon and Touch Icons -->
-		
+
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-46781574-1', 'AttackNode.com');
+        ga('send', 'pageview');
+
+    </script>
+
+    <!-- KissMetrics -->
+    <script type="text/javascript">var _kmq = _kmq || [];
+    var _kmk = _kmk || '3adbaa1051cf24981e86ad2814599d8ad4a29027';
+    function _kms(u){
+        setTimeout(function(){
+            var d = document, f = d.getElementsByTagName('script')[0],
+                    s = d.createElement('script');
+            s.type = 'text/javascript'; s.async = true; s.src = u;
+            f.parentNode.insertBefore(s, f);
+        }, 1);
+    }
+    _kms('//i.kissmetrics.com/i.js');
+    _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+    </script>
+
 </head>
 
 <body>
@@ -157,44 +184,53 @@
 			<!-- start: Content -->
 			<div id="content" class="col-lg-10 col-sm-11">
 
-                <div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert">×</button> Have you seen the <strong><a href="#" target="_blank">How to Use AttackNode Guide</a></strong>?</div>
-
-                <h1>Applications</h1>
-
+                <h1>Application Detail</h1>
 
                 <div class="row" id="chart1">
                     <div class="col-lg-12">
                         <div class="box">
-                            <div class="box-header" data-original-title>
-                                <h2><i class="icon-tasks"></i><span class="break"></span>Running Applications</h2>
+                            <!--<div class="box-header" data-original-title>
+                                <h2><i class="icon-tasks"></i><span class="break"></span>Information</h2>
                             </div>
+                            -->
                             <div class="box-content">
-				                <a href="launch.html"><button class="btn btn-large btn-success">Add Application <div class="icon-play"></div></button></a>
-                                <table class="table table-striped table-bordered bootstrap-datatable " id="tableEvents">
-                                <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Status</th>
-                                    <th>Image</th>
-                                    <th>Deployed</th>
-                                    <th>Action</th>
-                                </tr>
-                                </thead>
-                                <tbody>
 
-                                    <tr>
-                                        <td class="center">Wordpress</td>
-                                        <td>Running</td>
-                                        <td class="center">tutum/wordpress</td>
-                                        <td class="center">5 minutes ago</td>
-                                        <td class="center">
-                                            <i class="glyphicons-icon pause"></i>
-                                            <i class="glyphicons-icon stop"></i>
-                                        </td>
-                                    </tr>
+                                <div class="priority low"><span>--------</span></div>
 
-                                </tbody>
-                                </table>
+                                <div class="task low">
+                                    <div class="desc">
+                                        <div class="title">Application Name:</div>
+                                        <div>
+                                            <p class="lead">Wordpress</p>
+                                            <!--<p>WordPress is web software you can use to create a beautiful website or blog. We like to say that WordPress is both free and priceless at the same time.  The core software is built by hundreds of community volunteers, and when you’re ready for more there are thousands of plugins and themes available to transform your site into almost anything you can imagine. Over 60 million people have chosen WordPress to power the place on the web they call “home” — we’d love you to join the family.</p>-->
+                                        </div>
+                                    </div>
+                                    <div class="time">
+                                        Launched
+                                        <div class="date">June 13, 2014</div>
+                                        <div> 0 minute</div>
+                                    </div>
+                                </div>
+                                <div class="task low">
+                                    <div class="desc">
+                                        <div class="title">Image</div>
+                                        <div>
+                                            <p class="lead">tutum/wordpress</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="task low">
+                                    <div class="desc">
+                                        <div class="title">Connection Information</div>
+                                        <div>
+                                            <p class="lead">
+                                                <a href="http://wordpress-1.attacknode.com" target="_blank">http://wordpress-1.attacknode.com</a>
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div><!--/col-->
@@ -210,8 +246,25 @@
 				</div><!--/row-->		
 		
 	</div><!--/container-->
-	
-		
+
+        <!-- Launch status modal -->
+        <div class="modal fade" id="launchStatusModal" role="dialog" aria-labelledby="launchStatusModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Launching Application</h4>
+                    </div>
+                    <div class="modal-body" id="launchStatusModelBody">
+                        <p>...</p>
+                    </div>
+                    <div class="modal-footer">
+                        <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
+                        <!--<a href="apps.html"><button type="button" class="btn btn-primary">Dismiss</button></a>-->
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
 
 	
 	<div class="clearfix"></div>
@@ -276,7 +329,31 @@
 
 	<!-- end: JavaScript-->
 
+        <!-- CrazyEgg -->
+        <script type="text/javascript">
+            setTimeout(function(){var a=document.createElement("script");
+                var b=document.getElementsByTagName("script")[0];
+                a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/5164.js?"+Math.floor(new Date().getTime()/3600000);
+                a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+        </script>
 
+    <!-- Launching Image -->
+        <script>
+
+            function launchApp(btnData){
+
+                var image_name=$(btnData).attr("data-image-name");
+                var image_id=$(btnData).attr("data-image-id");
+
+                $("#launchStatusModelBody").html("<p>Your application instanct is launching.  Please wait. <br/><br/>image_id: "+image_id+"<br/>image_name: "+image_name+'<br/><h1>Launching......</h1><br/><div class="progress progress-striped active"><div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%"><span class="sr-only">100% Complete</span></div></div>');
+
+                window.setTimeout(function(){
+                    console.log('heelo');
+                    window.location.replace("apps.html");
+                },4000);
+            }
+
+        </script>
 	
 </body>
 </html>
